# cdc-test-poc

./: .editorconfig  .gitignore  AnimalAPI.yaml  README.md  WebApp-AnimalAPI.json  openapi.yaml  slide.md
.devcontainer/: devcontainer.json
api/: Makefile  api.py  conftest.py  pact_provider.py  pyproject.toml
api/tests/: conftest.py  test_provider.py
web/: README.md  api.spec.ts  client.ts  package.json  tsconfig.json
web/pact/: Web App-Animal API.json
web/src/__tests__/: DogServiceClient.spec.ts
